attempt to fix hyperconverged
